change e2e to end to end

--- a/packages/documentation/src/pages/platform/unit-testing.mdx
+++ b/packages/documentation/src/pages/platform/unit-testing.mdx
@@ -3,7 +3,7 @@
 |Test Type|File Format|Where|When|Libraries|
 |---|---|---|---|---|
 | Unit |*.unit.spec.js | Any .unit.spec.js file located in the `/src` folder. Typically located in a directory close to the code being tested | Locally through npm script commands<br/><br/>Jenkins build (Unit)<br/><br/>After merging to master | [mocha.js](https://mochajs.org/)<br/><br/>[chai.js](https://www.chaijs.com/)<br/><br/>[chai-as-promised](https://github.com/domenic/chai-as-promised)<br/><br/>[sinon.js](https://sinonjs.org/)<br/><br/>[enzyme](https://airbnb.io/enzyme/)<br/><br/>[enzyme-adapter-react-16](https://www.npmjs.com/package/enzyme-adapter-react-16)<br/><br/>[react-dom](https://www.npmjs.com/package/react-dom)<br/><br/>[react-dom/test-utils](https://reactjs.org/docs/test-utils.html)<br/><br/>[react-test-renderer](https://www.npmjs.com/package/react-test-renderer)<br/><br/>[jsdom](https://airbnb.io/enzyme/docs/guides/jsdom.html) |
-| e2e <br/>(End to End) | *.e2e.spec.js  | Any .e2e.spec.js file located in the `/src` folder. Typically located in a directory close to the code being tested<br/><br/> We use nightwatch.js to run our e2e tests. <br/><br/> Nightwatch configuration files can be found in `config/`<br/><br/> Scripts for running nightwatch tests live under `script/` | Locally through npm script commands<br/><br/>Jenkins build (e2e)<br/><br/>After merging to master | [nightwatch.js](http://nightwatchjs.org/)<br/><br/>[saucelabs](https://saucelabs.com/)<br/><br/>[selenium-server](https://www.npmjs.com/package/selenium-server)|
+| End to End | *.e2e.spec.js  | Any .e2e.spec.js file located in the `/src` folder. Typically located in a directory close to the code being tested<br/><br/> We use nightwatch.js to run our e2e tests. <br/><br/> Nightwatch configuration files can be found in `config/`<br/><br/> Scripts for running nightwatch tests live under `script/` | Locally through npm script commands<br/><br/>Jenkins build (e2e)<br/><br/>After merging to master | [nightwatch.js](http://nightwatchjs.org/)<br/><br/>[saucelabs](https://saucelabs.com/)<br/><br/>[selenium-server](https://www.npmjs.com/package/selenium-server)|
 | Visual Regression<br/>[see more](/architecture/visual-regression-testing) | | Tests are run through a script found at `/src/platform/testing/visual-regression/index.js` | Locally through npm script commands | [puppeteer](https://github.com/GoogleChrome/puppeteer)<br/><br/>[resemble](https://github.com/rsmbl/Resemble.js?files=1)|
 | Accessibility | | **axe-core**: automated accessibility testing | Locally through npm script commands<br/><br/>Jenkins build (accessibility)<br/><br/>After merging to master | [axe-core](https://github.com/dequelabs/axe-core)|
 | Linting | *.js | Any .js file located in the `/src` folder. | During the pre-commit hook<br/><br/>Jenkins build (Lint) | [eslint](https://eslint.org/)<br/><br/>[eslint-config-airbnb](https://www.npmjs.com/package/eslint-config-airbnb)<br/><br/>[eslint-plugin-jsx-a11y](https://github.com/evcohen/eslint-plugin-jsx-a11y)<br/><br/>[eslint-plugin-no-unsafe-innerhtml](https://www.npmjs.com/package/eslint-plugin-no-unsafe-innerhtml)<br/><br/>[eslint-plugin-react](https://github.com/yannickcr/eslint-plugin-react)<br/><br/>[eslint-plugin-scanjs-rules](https://www.npmjs.com/package/eslint-plugin-scanjs-rules)|
