--- a/packages/documentation/src/pages/documentation-guide/documentation-style-guide.mdx
+++ b/packages/documentation/src/pages/documentation-guide/documentation-style-guide.mdx
@@ -4,7 +4,7 @@ This is a description of our house style for writing documentation. The goal is 
 
 ## Tone
 
-At a high level, the tone of your documentation should be an expression of our values. It should be inclusive and simple to use.
+At a high level, the tone of your documentation should adhere to the same [content principles](https://design.va.gov/content-style-guide/content-principles) used on VA.gov. Expanding on those content principles, your documentation should also be inclusive and simple to use.
 
 ### Inclusive
 
