--- a/packages/documentation/src/pages/platform/front-end-standards/documented-decisions/summary.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/documented-decisions/summary.mdx
@@ -1,10 +1,11 @@
 # Summary of documented decisions
 
-- May 2016 - [Why we build with Ruby, rails, React, and Metalsmith](/architecture/front-end-standards/documented-decisions/language-and-tech-stack)
-- August 2016 - [Why we use Redux](/architecture/front-end-standards/documented-decisions/redux)
-- Fall 2016 - [Browsers supported](/architecture/front-end-standards/documented-decisions/browser-support)
-- May 2017 - [Remove USWDW and Foundation grid](/architecture/front-end-standards/documented-decisions/uswds-foundation)
-- January 2017 - [Why we use react-jsonschema-form to build forms](/architecture/front-end-standards/documented-decisions/building-forms)
-- Feb 2017 - [Why we use SOCKS proxy to connect to internal tools](/architecture/front-end-standards/documented-decisions/SOCKS-proxy)
-- March 2018 - [Why we forked react-jsonschema-form](/architecture/front-end-standards/documented-decisions/rjsf-fork)
-- December 2018 - [Why we use Mocha instead of Jest](/architecture/front-end-standards/documented-decisions/jest)
+- May 2016 - [Why we build with Ruby, rails, React, and Metalsmith](/platform/front-end-standards/documented-decisions/language-and-tech-stack)
+- August 2016 - [Why we use Redux](/platform/front-end-standards/documented-decisions/redux)
+- Fall 2016 - [Browsers supported](/platform/front-end-standards/documented-decisions/browser-support)
+- May 2017 - [Remove USWDW and Foundation grid](/platform/front-end-standards/documented-decisions/uswds-foundation)
+- January 2017 - [Why we use react-jsonschema-form to build forms](/platform/front-end-standards/documented-decisions/building-forms)
+- Feb 2017 - [Why we use SOCKS proxy to connect to internal tools](/platform/front-end-standards/documented-decisions/SOCKS-proxy)
+- March 2018 - [Why we forked react-jsonschema-form](/platform/front-end-standards/documented-decisions/rjsf-fork)
+- November 2018 - [Why we omit the signin from Teamsite pages](/platform/front-end-standards/documented-decisions/teamsite-signin)
+- December 2018 - [Why we use Mocha instead of Jest](/platform/front-end-standards/documented-decisions/jest)
