--- a/packages/documentation/src/pages/documentation-guide/documentation-style-guide.mdx
+++ b/packages/documentation/src/pages/documentation-guide/documentation-style-guide.mdx
@@ -37,7 +37,7 @@ At a high level, the tone of your documentation should adhere to the same [conte
 
 ## Emphasis
 
-- **Double astericks** for `**bold**`
+- **Double asterisks** for `**bold**`
 - **Underscore** for `_italics_`
 - **Greater than** for `> block quotes`
 - Make documents easy to scan by emphasizing **subjects**, **actors** and **verbs**
