Add optional `backgroundOnly` prop to AlertBox

--- a/packages/formation-react/src/components/AlertBox/AlertBox.mdx
+++ b/packages/formation-react/src/components/AlertBox/AlertBox.mdx
@@ -46,6 +46,11 @@ import AlertBox from '@department-of-veterans-affairs/formation-react/AlertBox'
   <AlertBox
     content={<p>Content without heading.</p>}
     status="info"/>
+  <AlertBox
+    headline="Informational backgroundOnly alert"
+    content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id felis pulvinar ligula ultricies sollicitudin eget nec dui. Cras augue velit, pellentesque sit amet nisl ut, tristique suscipit sem. Cras sollicitudin auctor mattis."
+    status="info"
+    backgroundOnly />
 </div>
 ```
 
@@ -87,5 +92,10 @@ import AlertBox from '@department-of-veterans-affairs/formation-react/AlertBox'
     <AlertBox
       content={<p>Content without heading.</p>}
       status="info"/>
+    <AlertBox
+      headline="Background Only alert"
+      content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id felis pulvinar ligula ultricies sollicitudin eget nec dui. Cras augue velit, pellentesque sit amet nisl ut, tristique suscipit sem. Cras sollicitudin auctor mattis."
+      status="info"
+      backgroundOnly />
   </div>
 </div>
