style results dropdown

--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -1,6 +1,6 @@
 ---
-title: deploy
-tags: cat, dog, spices, awesome
+title: Deploy
+tags: build, rollback, manual deploy, automatic deploy, static page deploy, deployment
 ---
 
 # Deploy
