--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deploy
+title: Workflow- Deploy
 tags: build, rollback, manual deploy, automatic deploy, static page deploy, deployment
 ---
 
