--- a/packages/documentation/src/pages/getting-started/workflow/overview.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/overview.mdx
@@ -1,3 +1,7 @@
+---
+title:  Workflow- Overview
+---
+
 # VA.gov workflow
 
 VA.gov uses a [Continuous Integration](https://www.thoughtworks.com/continuous-integration) process, which consists of the following steps:
