add front matter

--- a/packages/formation-react/src/components/AcceptTermsPrompt/AcceptTermsPrompt.mdx
+++ b/packages/formation-react/src/components/AcceptTermsPrompt/AcceptTermsPrompt.mdx
@@ -1,6 +1,7 @@
 ---
 title: AcceptTermsPrompt
 name: AcceptTermsPrompt
+tags: terms prompt, component
 ---
 
 import AcceptTermsPrompt from './AcceptTermsPrompt'
