--- a/packages/formation-react/src/components/ErrorableCheckboxGroup/ErrorableCheckboxGroup.mdx
+++ b/packages/formation-react/src/components/ErrorableCheckboxGroup/ErrorableCheckboxGroup.mdx
@@ -1,6 +1,7 @@
 ---
 title: ErrorableCheckboxGroup
 name: ErrorableCheckboxGroup
+const: checkbox group, component
 ---
 
 import ErrorableCheckboxGroup from './ErrorableCheckboxGroup'
