--- a/packages/formation-react/src/components/ErrorableFileInput/ErrorableFileInput.mdx
+++ b/packages/formation-react/src/components/ErrorableFileInput/ErrorableFileInput.mdx
@@ -1,6 +1,7 @@
 ---
 title: ErrorableFileInput
 name: ErrorableFileInput
+tags: file input, component
 ---
 
 import ErrorableFileInput from './ErrorableFileInput'
