--- a/packages/formation-react/src/components/ErrorableMonthYear/ErrorableMonthYear.mdx
+++ b/packages/formation-react/src/components/ErrorableMonthYear/ErrorableMonthYear.mdx
@@ -1,6 +1,7 @@
 ---
 title: ErrorableMonthYear
 name: ErrorableMonthYear
+tags: month, year, component
 ---
 
 import ErrorableMonthYear from './ErrorableMonthYear'
