--- a/packages/formation-react/src/components/ErrorableNumberInput/ErrorableNumberInput.mdx
+++ b/packages/formation-react/src/components/ErrorableNumberInput/ErrorableNumberInput.mdx
@@ -1,6 +1,7 @@
 ---
 title: ErrorableNumberInput
 name: ErrorableNumberInput
+tags: number input, component
 ---
 
 import ErrorableNumberInput from './ErrorableNumberInput'
