--- a/packages/formation-react/src/components/ErrorableRadioButtons/ErrorableRadioButtons.mdx
+++ b/packages/formation-react/src/components/ErrorableRadioButtons/ErrorableRadioButtons.mdx
@@ -1,6 +1,7 @@
 ---
 title: ErrorableRadioButtons
 name: ErrorableRadioButtons
+tags: radio buttons, component
 ---
 
 import ErrorableRadioButtons from './ErrorableRadioButtons'
