--- a/packages/formation-react/src/components/ErrorableTextArea/ErrorableTextArea.mdx
+++ b/packages/formation-react/src/components/ErrorableTextArea/ErrorableTextArea.mdx
@@ -1,6 +1,7 @@
 ---
 title: ErrorableTextArea
 name: ErrorableTextArea
+tags: text area, component
 ---
 
 import ErrorableTextArea from './ErrorableTextArea'
