--- a/packages/formation-react/src/components/ErrorableTextInput/ErrorableTextInput.mdx
+++ b/packages/formation-react/src/components/ErrorableTextInput/ErrorableTextInput.mdx
@@ -1,6 +1,7 @@
 ---
 title: ErrorableTextInput
 name: ErrorableTextInput
+tags: text input, component
 ---
 
 import ErrorableTextInput from './ErrorableTextInput'
