--- a/packages/formation-react/src/components/LoadingIndicator/LoadingIndicator.mdx
+++ b/packages/formation-react/src/components/LoadingIndicator/LoadingIndicator.mdx
@@ -1,6 +1,7 @@
 ---
 title: LoadingIndicator
 name: LoadingIndicator
+tags: indicator, component
 ---
 
 import LoadingIndicator from './LoadingIndicator'
