--- a/packages/formation-react/src/components/PrivacyAgreement/PrivacyAgreement.mdx
+++ b/packages/formation-react/src/components/PrivacyAgreement/PrivacyAgreement.mdx
@@ -1,6 +1,7 @@
 ---
 title: PrivacyAgreement
 name: PrivacyAgreement
+tags: privacy agreement
 ---
 
 import PrivacyAgreement from './PrivacyAgreement'
