--- a/packages/formation-react/src/components/SegmentedProgressBar/SegmentedProgressBar.mdx
+++ b/packages/formation-react/src/components/SegmentedProgressBar/SegmentedProgressBar.mdx
@@ -1,6 +1,7 @@
 ---
 title: SegmentedProgressBar
 name: SegmentedProgressBar
+tags: progress bar
 ---
 
 import SegmentedProgressBar from './SegmentedProgressBar'
