--- a/packages/formation-react/src/components/ErrorableCheckbox/ErrorableCheckbox.mdx
+++ b/packages/formation-react/src/components/ErrorableCheckbox/ErrorableCheckbox.mdx
@@ -1,7 +1,7 @@
 ---
 title: ErrorableCheckbox
 name: ErrorableCheckbox
-tags: checkbox
+tags: checkbox, component
 ---
 
 import ErrorableCheckbox from './ErrorableCheckbox'
