fix typo in frontmatter

--- a/packages/formation-react/src/components/SortableTable/SortableTable.mdx
+++ b/packages/formation-react/src/components/SortableTable/SortableTable.mdx
@@ -1,7 +1,7 @@
 ---
 title: SortableTable
 name: SortableTable
-tags: sortabe table
+tags: sortable table
 ---
 
 import SortableTable from './SortableTable'
