--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -1,3 +1,8 @@
+---
+title: Workflow- Deploy
+tags: build, rollback, manual deploy, automatic deploy, static page deploy, deployment
+---
+
 # Deploy
 
 Code goes through several steps to get to production. This document describes this process. It should also be noted that this is the same flow for both content and code changes.
