add forms indexing info

--- a/packages/documentation/src/pages/forms/available-widgets.mdx
+++ b/packages/documentation/src/pages/forms/available-widgets.mdx
@@ -1,3 +1,7 @@
+---
+title: Available form widgets
+---
+
 # Available form widgets
 
 Widgets are React components that return specific form elements. Set these widgets in a config file while building your form.
