--- a/packages/documentation/src/pages/forms/form-tutorial-advanced.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-advanced.mdx
@@ -1,5 +1,6 @@
 ---
-title: VAFS tutorial - intermediate
+title: VAFS - advanced tutorial
+tags: common defintions, fullSchema
 ---
 
 # Advanced tutorial
