--- a/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
@@ -1,12 +1,13 @@
 ---
-title: VAFS tutorial - basic
+title: VAFS - basic tutorial
+tags: yeoman generator, new form, setup form,
 ---
 
 # Basic tutorial
 
-In this doc, we'll walk through creating a new form and making some simple changes. 
+In this doc, we'll walk through creating a new form and making some simple changes.
 
-Prerequisites: 
+Prerequisites:
 - VA.gov [running locally](/getting-started)
 - [VA.gov Yeoman generator](/platform/generator) installed locally (first step in linked page)
 
