--- a/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
@@ -1,5 +1,6 @@
 ---
-title: VAFS tutorial - intermediate
+title: VAFS - intermediate tutorial
+tags: form validation, conditional fields, required fields, conditional pages,
 ---
 
 # Intermediate tutorial
