--- a/packages/documentation/src/pages/forms/index.mdx
+++ b/packages/documentation/src/pages/forms/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: VA Forms System
+tags: overview
 ---
 
 # VA.gov Forms System
@@ -21,7 +22,7 @@ VAFS consists of several different pieces:
 - Hooks for custom validation, hiding/showing fields, and writing custom fields and widgets
 - Save and restore form data using the VA.gov save in progress and prefill APIs
 
-## When to use VAFS 
+## When to use VAFS
 
 VAFS is best suited for forms that
 
