--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -1,3 +1,8 @@
+---
+title: Available form features and usage guidelines
+tags: footer, progress bar, title, date, alerts, radio button group, checkbox group, required field, contexual error message, dupcliate field validation, sequential duplicate form groups, review page, required checkbox before submission, remote error, event monitoring
+---
+
 # Available form features and usage guidelines
 
 These form features are available in the VAFS library. We've provided information about how to implement them in your form.
@@ -29,7 +34,7 @@ This widget allows you to provide important information, warnings, or step-by-st
 
 ### Usage guidelines
 
-To include the component, set the `formConfig.introduction` property to a reference to that component. Edit the JSX inside the component to change the content. For example: 
+To include the component, set the `formConfig.introduction` property to a reference to that component. Edit the JSX inside the component to change the content. For example:
 ```js
 import Introduction from '../components/Introduction.jsx';
 
