add forms system search indexing front matter

--- a/packages/formation-react/src/components/AlertBox/AlertBox.mdx
+++ b/packages/formation-react/src/components/AlertBox/AlertBox.mdx
@@ -1,6 +1,7 @@
 ---
 title: AlertBox
 name: AlertBox
+tags: informational, warning, error, success, continue, dismissable
 ---
 
 import AlertBox from './AlertBox'
