--- a/packages/formation-react/src/components/MegaMenu/MegaMenu.mdx
+++ b/packages/formation-react/src/components/MegaMenu/MegaMenu.mdx
@@ -154,7 +154,7 @@ This will generate a dropdown with only links.
 ```
 **This will generate this view.**
 
-![alt nav style 1](../../../../documentation/src/images/mega-menu/nav-version-2.png)
+![alt nav style 1](../../../documentation/src/images/mega-menu/nav-version-2.png)
 
 #### Just a link
 This will just generate a link in the nav-bar
