--- a/packages/formation-react/src/components/AdditionalInfo/AdditionalInfo.mdx
+++ b/packages/formation-react/src/components/AdditionalInfo/AdditionalInfo.mdx
@@ -1,7 +1,7 @@
 ---
 title: AdditionalInfo
 name: AdditionalInfo
-tags: info, component
+tags: info, component, accordion
 ---
 
 import AdditionalInfo from './AdditionalInfo'
