--- a/packages/formation-react/src/components/ErrorableFileInput/ErrorableFileInput.mdx
+++ b/packages/formation-react/src/components/ErrorableFileInput/ErrorableFileInput.mdx
@@ -1,7 +1,7 @@
 ---
 title: ErrorableFileInput
 name: ErrorableFileInput
-tags: file input, component
+tags: file input, component, upload
 ---
 
 import ErrorableFileInput from './ErrorableFileInput'
