add additional tags to common patterns for building forms

--- a/packages/documentation/src/pages/forms/common-patterns-for-building-forms.mdx
+++ b/packages/documentation/src/pages/forms/common-patterns-for-building-forms.mdx
@@ -1,6 +1,6 @@
 ---
 title: Common patterns for building forms
-tags: custom field validation
+tags: custom field validation, conditional fields, conditional pages, dynamic drop down, expand under, text block
 ---
 
 # Common patterns for building forms
