platform documentation search indexing

--- a/packages/documentation/src/pages/documentation-guide/doc-page.mdx
+++ b/packages/documentation/src/pages/documentation-guide/doc-page.mdx
@@ -1,6 +1,7 @@
 ---
-title: How to Add Documents
+title: How to add documents
 ---
+
 ## How to Add Documents
 This is the process of how you should add new pages and documents to this website.
 
