--- a/packages/documentation/src/pages/platform/architecture/teamsite.mdx
+++ b/packages/documentation/src/pages/platform/architecture/teamsite.mdx
@@ -1,3 +1,8 @@
+---
+title: Teamsite
+tags: proxyRewrite, targetEnvironment
+---
+
 # Teamsite Overview
 
 Updated from [TeamSite Technical Solution and Implementation](https://github.com/department-of-veterans-affairs/vets.gov-team/issues/12779#issue-356005850)
