--- a/packages/documentation/src/pages/platform/front-end-standards/accessibility.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/accessibility.mdx
@@ -1,3 +1,8 @@
+---
+title: Accessibility standards
+tags: 508
+---
+
 # Accessibility standards
 
 ## Three rules for link and button success <sup id="heading3">[3]</sup>
