--- a/packages/documentation/src/pages/platform/front-end-standards/documented-decisions/language-and-tech-stack.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/documented-decisions/language-and-tech-stack.mdx
@@ -1,3 +1,8 @@
+---
+title: Documented decisions - Languages and tech stack
+tags: Ruby, rails, React
+---
+
 # Languages and Tech Stack
 
 | | | | |
