--- a/packages/documentation/src/pages/platform/front-end-standards/documented-decisions/summary.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/documented-decisions/summary.mdx
@@ -1,9 +1,13 @@
+---
+title: Summary of documented decisions
+---
+
 # Summary of documented decisions
 
 - May 2016 - [Why we build with Ruby, rails, React, and Metalsmith](/platform/front-end-standards/documented-decisions/language-and-tech-stack)
 - August 2016 - [Why we use Redux](/platform/front-end-standards/documented-decisions/redux)
 - Fall 2016 - [Browsers supported](/platform/front-end-standards/documented-decisions/browser-support)
-- May 2017 - [Remove USWDW and Foundation grid](/platform/front-end-standards/documented-decisions/uswds-foundation)
+- May 2017 - [Remove USWDS and Foundation grid](/platform/front-end-standards/documented-decisions/uswds-foundation)
 - January 2017 - [Why we use react-jsonschema-form to build forms](/platform/front-end-standards/documented-decisions/building-forms)
 - Feb 2017 - [Why we use SOCKS proxy to connect to internal tools](/platform/front-end-standards/documented-decisions/SOCKS-proxy)
 - March 2018 - [Why we forked react-jsonschema-form](/platform/front-end-standards/documented-decisions/rjsf-fork)
