--- a/packages/documentation/src/pages/platform/front-end-standards/redux.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/redux.mdx
@@ -1,3 +1,8 @@
+---
+title: Redux Best Practices
+tags: redux actions, async actions
+---
+
 # Redux Action Guidelines
 
 Actions are an important part of Redux and in order to making usage of Redux consistent and maintainable across applications, here are some guidelines to follow.
