--- a/packages/documentation/src/pages/platform/front-end-standards/styles.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/styles.mdx
@@ -1,3 +1,7 @@
+---
+title: Guidelines for good SCSS / CSS
+---
+
 # Guidelines for good SCSS / CSS
 
 Some guidelines for writing good CSS that scales well and doesn't make your colleagues ragey.
