--- a/packages/documentation/src/pages/platform/site-structure/bundles-and-code-organization.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/bundles-and-code-organization.mdx
@@ -1,3 +1,8 @@
+---
+title: Bundles and code organization
+tags: bundling with webpack, vendor.entry.js, settings.js, nightwatch, webpack config, build script, Jenkinsfile, babelrc, Dockerfile, eslintrc, gitignore, nvmrc, prettierrc, yarnrc,
+---
+
 # Bundles and Code Organization
 
 ## Application Bundling with Webpack
