--- a/packages/documentation/src/pages/platform/site-structure/client-overview.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/client-overview.mdx
@@ -1,3 +1,8 @@
+---
+title: Va.gov client overview
+tags: build process, Javascript applications, design system, routing for react apps, react on static content pages
+---
+
 # VA.gov client overview
 
 Welcome to the VA digital services platform front-end overview. The goal of this article is to provide a high level overview of our front end architecture to get you oriented with the [vets-website](https://github.com/department-of-veterans-affairs/vets-website) repository.
