--- a/packages/documentation/src/pages/platform/site-structure/styling-overview.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/styling-overview.mdx
@@ -1,3 +1,8 @@
+---
+title: CSS general info
+tags: styling overview, sass, SCSS, US Web Design System, USWDS, Foundation, Font Awesome
+---
+
 # CSS General Info
 
 ## Background
