--- a/packages/documentation/src/pages/platform/tools/generator.mdx
+++ b/packages/documentation/src/pages/platform/tools/generator.mdx
@@ -1,3 +1,8 @@
+---
+title: Va.gov application generator
+tags: yeoman
+---
+
 # VA.gov application generator
 
 We have a Yeoman generator for starting up new React applications in vets-website. This page will guide you through setting up the generator and explaining the questions that are asked as part of the setup process.
