--- a/packages/documentation/src/pages/platform/tools/visual-regression-testing.mdx
+++ b/packages/documentation/src/pages/platform/tools/visual-regression-testing.mdx
@@ -1,3 +1,8 @@
+---
+title: Visual regression testing
+tags: vrt
+---
+
 # Visual Regression Testing
 
 This is the first iteration of visual regression testing. It is useful to detect side effects or scope of visual changes.
