--- a/packages/documentation/src/pages/documentation-guide/documentation-style-guide.mdx
+++ b/packages/documentation/src/pages/documentation-guide/documentation-style-guide.mdx
@@ -1,3 +1,7 @@
+---
+title: Documentation style guide
+---
+
 # Documentation style guide
 
 This is a description of our house style for writing documentation. The goal is to establish recommendations that assist engineers with creating clear, consistent, and concise documentation. This is **not a set of rules** to follow.
