--- a/packages/documentation/src/pages/platform/front-end-standards/documented-decisions/SOCKS-proxy.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/documented-decisions/SOCKS-proxy.mdx
@@ -1,3 +1,7 @@
+---
+title: Documented decisions - why we use SOCKS proxy to connect to internal tools
+---
+
 # SOCKS proxy design
 
 Some utilities, such as metrics dashboards, error reporting, and deployment
