18217 forms system search index (#98)

--- a/packages/documentation/src/pages/forms/common-patterns-for-building-forms.mdx
+++ b/packages/documentation/src/pages/forms/common-patterns-for-building-forms.mdx
@@ -1,3 +1,8 @@
+---
+title: Common patterns for building forms
+tags: custom field validation, conditional fields, conditional pages, dynamic drop down, expand under, text block
+---
+
 # Common patterns for building forms
 
 Some forms require custom validation, styles, or conditional information based on user input. Use these patterns to address those needs.
