platform documentation search indexing (#99)

--- a/packages/documentation/src/pages/platform/tools/feature-flags.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-flags.mdx
@@ -1,3 +1,8 @@
+---
+title: Front end feature flags
+tags: vagovprod, vagovstaging, vagovdev
+---
+
 # Front end feature flags
 
 Agile and user centric workflows often use testing of partially complete features to refine or research experiences. This document provides recommendations on using feature flags to manage new unreleased features in our continuous integration environment.
