--- a/packages/documentation/src/pages/platform/front-end-standards/documented-decisions/building-forms.mdx
+++ b/packages/documentation/src/pages/platform/front-end-standards/documented-decisions/building-forms.mdx
@@ -1,3 +1,8 @@
+---
+title: Documented decisions - Why we use react-jsonschema-form to build forms
+tags: rjsf, redux-form, json schema, react-form
+---
+
 # Building forms
 
 | | | | |
